--- a/package.json
+++ b/package.json
@@ -1,3 +1,7 @@
 {
-    "type": "module"
-  }
+    "type": "module",
+    "dependencies": {
+        "lodash": "^4.17.21",
+        "ramda": "^0.30.1"
+    }
+}
